--- a/GroceryOrderingApp/appsettings.json
+++ b/GroceryOrderingApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User Id=COMP214_W23_zo_19;Password=password;Data Source=199.212.26.208:1521/SQLD;"
+    "DefaultConnection": "User Id=<UserID>;Password=<password>;Data Source=<IPAddress/URL:<PORT>/<SID>;"
   }
 }
